--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <div class="box-1">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum nostrum sapiente nesciunt non ea nihil pariatur ratione, in sit eveniet ullam delectus nisi iusto consequatur, ipsam laudantium optio voluptatibus atque.</p>
+        </div>
+
+        <div class="box-2">
+            <h1>Goodbye World</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum nostrum sapiente nesciunt non ea nihil pariatur ratione, in sit eveniet ullam delectus nisi iusto consequatur, ipsam laudantium optio voluptatibus atque.</p>
+        </div>
+
+        <div class="categories">
+            <h2>Categories</h2>
+            <ul>
+                <li><a href="#">Category 1</a></li>
+                <li><a href="#">Category 2</a></li>
+                <li><a href="#">Category 3</a></li>
+                <li><a href="#">Category 4</a></li>
+            </ul>
+        </div>
+    </div> <!-- ./container -->
 </body>
 </html>
