--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -27,6 +27,48 @@
                 <li><a href="#">Category 4</a></li>
             </ul>
         </div>
+
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <textarea name="message"></textarea>
+            </div>
+            <input class="button" type="submit" value="Submit" name="">
+        </form>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
+        </div>
+         <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
+        </div>
+         <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
+        </div>
+
+        <div class="clr"></div>
+
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
+        </div>
+
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
+        </div>
     </div> <!-- ./container -->
+
+    <div style="margin-top: 500px;"></div>
 </body>
 </html>
