--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -67,7 +67,29 @@
         <div id="sidebar">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sunt enim ipsa quod illum voluptatem reprehenderit, laboriosam perferendis tenetur totam dicta aperiam quisquam ea rem impedit nam minima molestias fugit!</p>
         </div>
+
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+
+        <ul class="my-list">
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+        </ul>
     </div> <!-- ./container -->
+
+    <a class="fix-me button" href="">Hello</a>
 
     <div style="margin-top: 500px;"></div>
 </body>
