--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -6,7 +6,15 @@
     <title>My Website</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+
+    <header id="main-header">
+        <div class="container">
+            <h1>My Website</h1>
+        </div>
+    </header>
+
     <nav id="navbar">
         <div class="container">
             <ul>
@@ -20,13 +28,13 @@
 
     <section id="showcase">
         <div class="container">
-            <h1>Lorem ipsum dolor sit!</h1>
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quas itaque?</h1>
         </div>
     </section>
 
     
     <div class="container">
-        <section id="mian">
+        <section id="main">
             <h1>Welcome</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident aliquam dolores magni doloribus et? Quos magnam sint maxime omnis numquam voluptatum eligendi, facilis magni voluptas dolore error cupiditate dignissimos ducimus?</p>
         </section>
